# papertrail-bench

./: .gitignore  LICENSE  README.md
corpsim/: README.md  judge.py  selftest.py
corpsim/docs/: benchmark-landscape.md
docs/: STATUS.md  baselines-b0.md  ground-truth-schema.md  plan-b1.md  presets.md
generator/: pyproject.toml
generator/src/papertrail/: __init__.py  cli.py  corpus.py  facts.py  model.py  questions.py  render.py  simulate.py  world.py
generator/tests/: conftest.py  test_determinism.py  test_g3.py  test_g4.py  test_invariants.py  test_questions.py
harness/: PROTOCOL.md  package.json  pnpm-lock.yaml  tsconfig.json
harness/src/: adapter.ts  cli.ts  corpus.ts  index.ts  report.ts  run.ts  score.ts  subprocess.ts
harness/src/adapters/: oracle.ts  refuse.ts
harness/src/baselines/: README.md  bm25.ts  extract.ts  hybrid-rrf.ts  naive-vector.ts  substrate.ts
harness/tests/: baselines.test.ts  corpus.test.ts  g1.test.ts  g2.test.ts  g3.test.ts  oracle.test.ts  score.test.ts  subprocess.test.ts
harness/tests/fixtures/: echo-adapter.mjs
harness/tests/fixtures/corpus-g1/: manifest.json  questions.jsonl
harness/tests/fixtures/corpus-g1/ground_truth/: documents.jsonl  events.jsonl  evidence.jsonl  facts.jsonl  messages.jsonl  parties.jsonl  people.jsonl  threads.jsonl
harness/tests/fixtures/corpus-g1/messages/: MSG-000001.eml  MSG-000002.eml  MSG-000003.eml  MSG-000004.eml  MSG-000005.eml  MSG-000006.eml  (+614 more)
harness/tests/fixtures/corpus-g2/: manifest.json  questions.jsonl
harness/tests/fixtures/corpus-h1/: manifest.json  questions.jsonl
(+1192 files in other folders)
