[project]
name = "papertrail"
version = "0.0.1"
description = "PaperTrail-Bench ground-truth corpus generator"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/papertrail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
